# SharpMark

./: .gitignore  CMakeLists.txt  FFT.cpp  FFT.h  LICENSE  Readme.md  XMP_tools.cpp  XMP_tools.h  bmp.cpp  bmp.h  build_portable.sh  cmake_uninstall.cmake.in  flake.nix  gui.cpp  gui.h  main.cpp  makefile  scan.cpp  scan.h  struct.h
assets/: sharpmark.desktop
assets/icons/: app_icon.rc
gui/: gui_context.h
gui/actions/: delete_blurry_action.h  photo_trash.cpp
gui/results/: result_store.cpp
gui/utils/: path_utils.cpp
gui/viewer/: image_viewer.cpp  image_viewer.h  preview_loader.cpp  preview_loader.h
gui/window/: main_window_builder.cpp  main_window_builder.h
src/: main.cpp  struct.h
src/gui/: gui.cpp  gui.h  gui_context.h
src/gui/actions/: delete_blurry_action.cpp  photo_trash.h
src/gui/results/: result_list_view.cpp  result_list_view.h  result_store.h
src/gui/status/: progress_summary.cpp  progress_summary.h
src/gui/utils/: path_utils.h
src/gui/viewer/: image_viewer.cpp  preview_loader.cpp  preview_loader.h
src/gui/window/: app_style.cpp  app_style.h  main_window_builder.cpp  main_window_builder.h
src/img_tools/: bmp.cpp  bmp.h  laplacian.cpp  laplacian.h
src/tools/: XMP_tools.cpp
